# learn-ai

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  AGENT_EVALUATION_IMPROVEMENTS.md  Dockerfile  Dockerfile-litellm  LICENSE  README-keycloak.md  README.md  RELEASE.rst  app.json  apt.txt  canvas-mcp-bridge.js  conftest.py  docker-compose.apps.yml  docker-compose.codespaces.yml  docker-compose.services.yml  docker-compose.yml  package.json  pyproject.toml  pytest.ini  renovate.json
.github/workflows/: ci-deploy.yml  ci.yml  production-deploy.yml  rc-deploy.yml
ai_agents/: agents.py  agents_test.py  apps.py  conftest.py  constants.py  consumers.py  consumers_test.py  factories.py  proxy.py  proxy_test.py  routing.py  serializers.py  utils_test.py
ai_agents/migrations/: 0001_initial.py
ai_chatbots/: admin.py  api.py  api_test.py  apps.py  chatbots.py  chatbots_test.py  checkpointers.py  checkpointers_test.py  conftest.py  constants.py  consumers.py  consumers_test.py  factories.py  models.py  opik_tracing.py  opik_tracing_test.py  permissions.py  posthog.py  posthog_test.py  prompts.py  prompts_test.py  proxies.py  proxies_test.py  routing.py  serializers.py  serializers_test.py  tasks.py  tasks_test.py  tools.py  tools_test.py  truncation.py  truncation_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
ai_chatbots/evaluation/: __init__.py  base.py  base_test.py  evaluators.py  evaluators_test.py  orchestrator.py  orchestrator_test.py  reporting.py  reporting_test.py  timeout_wrapper.py  timeout_wrapper_test.py
ai_chatbots/fixtures/: initial_llm_models.json  llm_models.json
ai_chatbots/fixtures/migrations/: 0012_llm_model_temp_reasoning.json
ai_chatbots/management/commands/: anonymize_sessions.py  backpopulate_tutor_checkpoints.py  clear_prompt_cache.py  convert_eval_csv_to_json.py  detach_duplicate_sessions.py  rag_evaluation.py  repair_checkpoints.py  setup_pg_checkpointer.py  update_prompt.py
ai_chatbots/migrations/: 0001_initial.py  0002_chat_sessions.py  0003_tutorbotoutput.py  0004_userchatsession_more_fields.py  0005_llmmodel.py  0005_userchatsession_defaults.py  0006_tutorbotoutput_edx_module_id.py  0007_convert_tutorbot_to_checkpoints.py  0008_tutorbotoutput_session.py  0009_djangocheckpoint_tutorbotoutput_created_on.py  0010_chatresponserating.py  0011_chatresponserating_rating_reason.py  0012_llm_model_temp_reasoning.py  0013_contentfeedback.py
authentication/: api.py  api_test.py  middleware_test.py
authentication/pipeline/: user.py
checkpointers/dj_checkpointer/: models.py
checkpointers/dj_checkpointer/migrations/: 0001_initial.py
config/: litellm_config.yml  mcp-gateway-config.yaml  nginx.conf.erb  tensorzero.toml
config/apisix/: apisix.yaml
config/keycloak/realms/: ol-local-realm.json
config/postgres/: init-litellm.sql
env/: backend.env  backend.local.example.env  codespaces.env  frontend.env  frontend.local.example.env  shared.env  shared.local.example.env
fixtures/: common.py  users.py
frontend-demo/: .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  dev-proxy-server.js  eslint.config.mjs  jest.config.ts  next.config.ts  package.json  tsconfig.json
frontend-demo/src/: constants.ts  jest-setup.ts
frontend-demo/src/app/: layout.tsx  page.tsx  providers.tsx  utils.tsx
frontend-demo/src/app/(home)/: AssessmentContent.tsx  BaseChatContent.tsx  CanvasAssessmentContent.tsx  CanvasProblemSelectionForm.tsx  ChatContainer.tsx  ChatTabs.tsx  ContentFileSearchContent.tsx  LearningMaterialSearchContent.tsx  LearningMaterialsSearchContent.tsx  LearningResourcesSearchContent.tsx  MetadataDisplay.tsx  OpenedxLoginAlert.tsx  OpenedxUnitSelectionForm.tsx  RecommendationContent.tsx  SelectModel.tsx  SelectPrompt.tsx  SelectSearchUrl.tsx  StyledAiChat.tsx  StyledAiChatDisplay.tsx  SyllabusCanvasContent.tsx  SyllabusContent.tsx  VerticalAndUnitSelector.tsx  VideoContent.tsx  page.tsx  util.ts
frontend-demo/src/app/tutor/: page.tsx
frontend-demo/src/app/ws/: page.tsx
frontend-demo/src/components/: ABTestMonitor.tsx  ABTestResponseSelector.tsx
frontend-demo/src/components/Header/: Header.tsx
frontend-demo/src/components/SearchInput/: SearchInput.test.tsx
frontend-demo/src/services/: abTestChoice.ts
frontend-demo/src/services/ai/: clients.ts  index.ts  settings.ts  urls.ts
frontend-demo/src/services/learn/: index.ts  settings.ts
frontend-demo/src/services/openedx/: client.ts  index.ts  queries.ts
frontends/: package.json
main/: admin.py  apps.py  aqueduct_settings.py  asgi.py  authentication.py  authentication_test.py  celery.py  conftest.py  constants.py  consumer_throttles.py  consumer_throttles_test.py  consumers.py  consumers_test.py  exceptions.py  factories.py  features.py  logging_filters.py  logging_filters_test.py  models.py  models_test.py  openlit_keycloak_auth.py  openlit_keycloak_auth_test.py  opik_keycloak_auth.py  opik_keycloak_auth_test.py  sentry.py  settings.py  settings_aqueduct.py  settings_aqueduct_dev.py  settings_test.py  telemetry.py  test_utils.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
main/middleware/: apisix_user.py  apisix_user_test.py  configs.py  util.py
main/migrations/: 0001_initial.py  0002_canvas_syllabus_rate_limit.py
main/templates/email/: email_base.html  subscribed_channel_digest.html
nginx/: Dockerfile
openapi/: hooks.py  settings_spectacular.py
openapi/specs/: v0.yaml  v1.yaml
scripts/: generate_openapi.sh  install_yarn.js  run-django-dev.sh
scripts/openapi-configs/: typescript-axios-v0.yaml
scripts/test/: python_tests.sh  test_suite.sh
test_json/: content_file_chunks.json  rag_evaluation.json  rag_evaluation_prompts.json  search_results.json  video_transcript_chunks.json
test_json/evaluation_sets/: qa_15_010.json  qa_15_280.json  qa_15_311.json  qa_15_515.json
users/: admin.py  apps.py  consumers.py  middleware.py  models.py  serializers.py  views.py
users/migrations/: 0001_add_custom_user_model.py  0002_userprofile.py
(+6 files in other folders)
