[project]
name = "learn-ai"
version = "0.71.0"
description = "AI applications for MIT Open Learning."
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.13.7,<3.14"
readme = "README.md"
license = "BSD-3"
dependencies = [
    "Django>=5.2.11,<6",
    "aiohttp>=3.12.15,<4",
    "beautifulsoup4>=4.13.4,<5",
    "boto3>=1.35.81,<2",
    "celery>=5.3.1,<6",
    "channels>=4.2.0,<5",
    "channels-redis>=4.2.1,<5",
    "configargparse>=1.7.1,<2",
    "dj-database-url>=2.0.0,<3",
    "dj-static>=0.0.6,<0.0.7",
    "django-anymail[mailgun]>=13.0,<14",
    "django-bitfield>=2.2.0,<3",
    "django-cache-memoize>=0.2.0,<0.3",
    "django-filter>=25.1,<26",
    "django-guardian>=3.0.0,<4",
    "django-health-check",
    "django-hijack>=3.4.1,<4",
    "django-ipware>=7.0.0,<8",
    "django-oauth-toolkit>=3.0.0,<4",
    "django-redis>=5.2.0,<6",
    "django-scim2>=0.19.1,<0.20",
    "django-server-status>=0.7.0,<0.8",
    "django-storages>=1.13.2,<2",
    "djangorestframework>=3.14.0,<4",
    "drf-jwt>=1.19.2,<2",
    "drf-spectacular>=0.29.0,<0.30",
    "gunicorn>=23.0.0,<24",
    "ipython>=9.0.0,<10",
    "langchain>=1.1.0,<2",
    "langchain-community>=0.4.1,<0.5",
    "langchain-core>=1.1.0,<2",
    "langchain-litellm>=0.5.0,<0.6",
    "langchain-openai>=1.1.0,<2",
    "langgraph==1.0.4",
    "langmem>=0.0.30,<0.0.31",
    "langsmith>=0.7.0,<0.8",
    "litellm>=1.53.5,<2",
    "markdown2>=2.5.2,<3",
    "named-enum>=1.4.0,<2",
    "opentelemetry-api>=1.31.0",
    "opentelemetry-exporter-otlp>=1.31.0",
    "opentelemetry-instrumentation-celery>=0.52b0",
    "opentelemetry-instrumentation-django>=0.52b0",
    "opentelemetry-instrumentation-psycopg>=0.52b0",
    "opentelemetry-instrumentation-redis>=0.52b0",
    "opentelemetry-instrumentation-requests>=0.52b0",
    "opentelemetry-sdk>=1.31.0",
    "posthog>=7.0.1,<8",
    "psycopg>=3.2.4,<4",
    "psycopg-pool>=3.2.4,<4",
    "pygithub>=2.0.0,<3",
    "redis>=5.0.0,<6",
    "requests>=2.31.0,<3",
    "ruff==0.15.2",
    "sentry-sdk[django, langgraph]>=2.37.1,<3",
    "social-auth-app-django>=5.6.0,<6",
    "social-auth-core[openidconnect]>=4.4.2,<5",
    "starlette==0.52.1",
    "ulid-py>=1.0.0,<2",
    "granian>=2.5.4,<3",
    "open-learning-ai-tutor>=0.2.14,<0.3",
    "httpx>=0.28.1,<0.29",
    "opentelemetry-instrumentation-httpx>=0.59b0,<0.60",
]

[dependency-groups]
dev = [
    "bpython>=0.26,<0.27",
    "ddt>=1.6.0,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "factory_boy>=3.3.0,<4",
    "faker>=40.0.0,<41",
    "ipdb>=0.13.13,<0.14",
    "nplusone>=1.0.0,<2",
    "pdbpp>=0.11.0,<0.12",
    "pytest>=8.0.0,<9",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=1.0.0,<2",
    "pytest-freezegun>=0.4.2,<0.5",
    "pytest-mock>=3.10.0,<4",
    "responses>=0.26.0,<0.27",
    "ruff>=0.15.0,<0.16",
    "safety>=3.0.0,<4",
    "semantic-version>=2.10.0,<3",
    "freezegun>=1.4.0,<2",
    "pytest-xdist[psutil]>=3.6.1,<4",
    "anys>=0.3.0,<0.4",
    "locust>=2.31.2,<3",
    "pytest-asyncio>=1.0.0,<2",
    "jupyter>=1.1.1,<2",
    "portalocker",
    "ollama",
    "google-genai>=1.9.0",
    "chromadb>=1.0.13,<2",
    "pandas>=2.3.0,<3",
]

[tool.uv]
package = false
default-groups = "all"
constraint-dependencies = ["langgraph-checkpoint<3"]

[tool.uv.sources]
django-health-check = { git = "https://github.com/revsys/django-health-check", rev = "ea258434ac626c7b1dc8f393fab19cb359fa855a" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
lint.ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "UP007"
]

lint.typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
"**/migrations/**" = ["ARG001"]
