[project]
name = "learn-ai"
version = "0.33.0"
description = "AI applications for MIT Open Learning."
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = "BSD-3"
dependencies = [
    "Django>=5.2.11,<6",
    "aiohttp>=3.12.15,<4",
    "beautifulsoup4>=4.13.4,<5",
    "boto3>=1.35.81,<2",
    "celery>=5.3.1,<6",
    "channels>=4.2.0,<5",
    "channels-redis>=4.2.1,<5",
    "configargparse>=1.7.1,<2",
    "dj-database-url>=2.0.0,<3",
    "dj-static>=0.0.6,<0.0.7",
    "django-anymail[mailgun]>=13.0,<14",
    "django-cache-memoize>=0.2.0,<0.3",
    "django-filter>=25.1,<26",
    "django-guardian>=3.0.0,<4",
    "django-hijack>=3.4.1,<4",
    "django-ipware>=7.0.0,<8",
    "django-oauth-toolkit>=3.0.0,<4",
    "django-redis>=5.2.0,<7",
    "django-scim2>=0.19.1,<0.20",
    "django-server-status>=0.7.0,<0.8",
    "django-storages>=1.13.2,<2",
    "djangorestframework>=3.14.0,<4",
    "drf-jwt>=1.19.2,<2",
    "drf-spectacular>=0.29.0,<0.30",
    "gunicorn>=23.0.0,<24",
    "ipython>=9.0.0,<10",
    "langchain>=1.3.9,<2",
    "langchain-community>=0.4.1,<0.5",
    "langchain-core>=1.1.0,<2",
    "langchain-litellm>=0.6.1,<0.7",
    "langchain-openai>=1.1.0,<2",
    "langgraph>=1.2.4,<2",
    "langmem>=0.0.30,<0.0.31",
    "langsmith>=0.8,<0.10",
    "litellm>=1.53.5,<2",
    "markdown2>=2.5.2,<3",
    "mitol-django-observability>=2026.1.0",
    "setuptools<82",
    "named-enum>=1.4.0,<2",
    "opentelemetry-instrumentation-celery>=0.52b0",
    "opentelemetry-instrumentation-django>=0.52b0",
    "opentelemetry-instrumentation-psycopg>=0.52b0",
    "opentelemetry-instrumentation-redis>=0.52b0",
    "opentelemetry-instrumentation-requests>=0.52b0",
    "posthog>=7.0.1,<8",
    "psycopg>=3.2.4,<4",
    "psycopg-pool>=3.2.4,<4",
    "pygithub>=2.0.0,<3",
    "redis>=5.0.0,<6",
    "requests>=2.31.0,<3",
    "ruff==0.15.14",
    "sentry-sdk[django, langgraph]>=2.37.1,<3",
    "social-auth-app-django>=5.6.0,<6",
    "social-auth-core>=4.4.2,<5",
    "starlette==1.3.1",
    "ulid-py>=1.0.0,<2",
    "granian>=2.5.4,<3",
    "open-learning-ai-tutor==0.2.16",
    "httpx>=0.28.1,<0.29",
    "opentelemetry-instrumentation-httpx>=0.59b0,<0.60",
    "django-health-check>=3.0.0,<4",
    "django-aqueduct[vault,derivations]>=0.8.0",
]

[dependency-groups]
dev = [
    "bpython>=0.26,<0.27",
    "ddt>=1.6.0,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "factory_boy>=3.3.0,<4",
    "faker>=40.0.0,<41",
    "ipdb>=0.13.13,<0.14",
    "nplusone>=1.0.0,<2",
    "pdbpp>=0.12.1,<0.13",
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=1.0.0,<2",
    "pytest-freezegun>=0.4.2,<0.5",
    "pytest-mock>=3.10.0,<4",
    "responses>=0.26.0,<0.27",
    "ruff>=0.15.0,<0.16",
    "safety>=3.0.0,<4",
    "semantic-version>=2.10.0,<3",
    "freezegun>=1.4.0,<2",
    "pytest-xdist[psutil]>=3.6.1,<4",
    "anys>=0.3.0,<0.4",
    "locust>=2.31.2,<3",
    "pytest-asyncio>=1.0.0,<2",
    "jupyter>=1.1.1,<2",
    "portalocker",
    "ollama",
    "google-genai>=1.9.0",
    "chromadb>=1.0.13,<2",
    "pandas>=3.0.1,<4",
    "mitol-drf-lint==2026.4.2",
    "deepeval>=4.0.7",
]

[tool.aqueduct]
modules = ["main.settings"]
output = "main/aqueduct_settings.py"
class_name = "AqueductSettings"
parity_model = "main.aqueduct_settings:AqueductSettings"
parity_legacy = "main.settings"
# Deliberate divergences, all documented in main/aqueduct_settings.py:
# - primitives the model carries that main.settings only reads inline
#   (DATABASE_URL, MITOL_DB_*, REDISCLOUD_URL, HOST_IP, RUN_DATA_MIGRATIONS)
# - AWS_* falsy-default mismatch (legacy get_string(..., False) -> False,
#   model uses a proper str | None)
# - conditionally-defined legacy names the model always carries
#   (STORAGES, IPWARE_PRIVATE_IP_PREFIX)
# - LOGGING is imported from mitol-django-observability by the settings shims,
#   not modeled
# - runtime-augmented keys: the parity harness compares the model's raw value
#   against `settings.X` after full Django init, so third-party apps and Django
#   itself have already mutated the legacy value. DATABASES/DEFAULT_DATABASE_CONFIG
#   gain ATOMIC_REQUESTS/AUTOCOMMIT/TEST/TIME_ZONE from Django's ConnectionHandler
#   (and the model deliberately omits sslmode under the sqlite fallback via
#   django_aqueduct.derivations.database_config); HEALTH_CHECK gains DISK_USAGE_MAX/
#   MEMORY_MIN/WARNINGS_AS_ERRORS/DISABLE_THREADING from django-health-check's
#   AppConfig.ready(). The model receives the identical augmentation at runtime.
parity_ignore = [
    "LOGGING",
    "DATABASE_URL",
    "MITOL_DB_CONN_MAX_AGE",
    "MITOL_DB_DISABLE_SSL",
    "REDISCLOUD_URL",
    "HOST_IP",
    "RUN_DATA_MIGRATIONS",
    "AWS_ACCESS_KEY_ID",
    "AWS_SECRET_ACCESS_KEY",
    "AWS_STORAGE_BUCKET_NAME",
    "STORAGES",
    "IPWARE_PRIVATE_IP_PREFIX",
    "DATABASES",
    "DEFAULT_DATABASE_CONFIG",
    "HEALTH_CHECK",
]

[tool.uv]
package = false
default-groups = "all"
environments = ["sys_platform != 'win32'"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88
# main/aqueduct_settings.py carries machine-owned `aqueduct:generated` regions;
# reformatting them would make `generate_aqueduct_settings --check` report drift.
extend-exclude = ["main/aqueduct_settings.py"]
force-exclude = true
lint.select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
lint.ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "PLC0415",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "UP007"
]

lint.typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
"**/migrations/**" = ["ARG001"]

[tool.bumpversion]
commit = false
tag = false
parse = "(?P<release>(?:[1-9][0-9]{3})\\.(?:1[0-2]|[1-9])\\.(?:3[0-1]|[12][0-9]|[1-9]))\\.(?P<build>\\d+)"
serialize = ["{release}.{build}"]

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{MM}.{DD}"

[tool.bumpversion.parts.build]
first_value = "1"

[[tool.bumpversion.files]]
filename = "main/settings.py"
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'

[[tool.bumpversion.files]]
filename = "main/aqueduct_settings.py"
search = "VERSION: str = Field(default='{current_version}')"
replace = "VERSION: str = Field(default='{new_version}')"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "uv.lock"
search = """
name = "learn-ai"
version = "{current_version}"
source = {{ virtual = "." }}"""
replace = """
name = "learn-ai"
version = "{new_version}"
source = {{ virtual = "." }}"""
